--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    text-decoration: none;
 }
 
 .logo {
@@ -45,9 +44,11 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    text-decoration: none;
 }
 
+.logo-href {
+    text-decoration: none;
+}
 
 /* site nav */
 .site-nav .link {
@@ -82,9 +83,6 @@ body {
     color: var(--accent-color);
 }
 
-.auth-nav .link.current {
-    color: var(--accent-color);
-}
 
 .works {
     background-color: #2F303A;
@@ -116,6 +114,10 @@ body {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+}
+
+.feature-list {
+    list-style: none;
 }
 
 /* button */
