--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ body {
     text-align: center;
 }
 
-.secton-partition {
+.section-partition {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
